--- a/rscamaro.html
+++ b/rscamaro.html
@@ -15,47 +15,92 @@
 <marquee>1991 Camaro RS Project</marquee>
 </font></font></font></b></p>
 <hr width="65%" noshade size="5" color="#FF0000">
+<p align="center"><b><font face="Arial Rounded MT Bold" size="7">2001 to 2005</font></b>
 <ul>
   <li><font face="Arial"><b>This was a rolling shell bought from Doncaster on
     the 5th January 2001 for £300!</b></font></li>
+  <li><font face="Arial"><b>No wheels, no tyres, no interior, no engine, no
+    gearbox, no propshaft and accident damaged on the front right corner.</b></font></li>
   <li><font face="Arial"><b>Finished in May 2005 after a LOT of work!&nbsp;</b></font></li>
   <li><font face="Arial"><b>Rescued from RAF Mildenhall where it had been
-    through the wars!</b></font></li>
-  <li><font face="Arial"><b>The engine that used to be in it had put a rod
-    through the block.</b></font></li>
-  <li><font face="Arial"><b>The gearbox that used to be in it was a T5 but was
-    removed to use in a Cobra Kit car.</b></font></li>
+    obviously driven hard by one of the personnel there.</b></font></li>
+  <li><font face="Arial"><b>The original engine had died by putting a od through
+    the side of the block.&nbsp; Then left.</b></font></li>
+  <li>
+    <p align="center"><font face="Arial"><b>The gearbox supposedly was removed
+    to put in a cobra replica.</b></font></li>
 </ul>
-<p><img border="0" src="img/2002_0105_100911AA.jpg" width="404" height="306">
+<p align="center"><img border="0" src="img/2002_0105_100911AA.jpg" width="404" height="306">
 <img border="0" src="img/2001_1231_110510AA.jpg" width="413" height="307"></p>
-<p><img border="0" src="img/2001_1231_105731AA.jpg" width="407" height="305">
+<p align="center"><img border="0" src="img/2001_1231_105731AA.jpg" width="407" height="305">
 <img border="0" src="img/2002_0127_101826AA.jpg" width="406" height="305"></p>
-<p><img border="0" src="img/2001_1231_110631AA.jpg" width="409" height="313">
+<p align="center"><img border="0" src="img/2001_1231_110631AA.jpg" width="409" height="313">
 <img border="0" src="img/2002_0127_101746AA.jpg" width="418" height="313"></p>
 <ul>
-  <li><b><font face="Arial">No engine, no gearbox, no propshaft, no interior,
-    crumpled front right corner and missing wheels.</font></b></li>
-  <li><b><font face="Arial">Eventually fitted a 350 V8 out of this pickup truck</font></b></li>
+  <li>
+    <p align="center"><b><font face="Arial">Eventually fitted a 350 V8 out of this pickup truck</font></b></li>
 </ul>
-<p><img border="0" src="img/2002_0207_131559AA.jpg" width="415" height="313">
+<p align="center"><img border="0" src="img/2002_0207_131559AA.jpg" width="415" height="313">
 <img border="0" src="img/2002_0207_131624AA.jpg" width="422" height="313"></p>
 <ul>
-  <li><font face="Arial"><b>During the build</b></font></li>
+  <li>
+    <p align="center"><font face="Arial"><b>During the build</b></font></li>
 </ul>
-<p><img border="0" src="img/2002_0417_192108AA.jpg" width="419" height="315"> <img border="0" src="img/2002_0331_115420AA.jpg" width="422" height="316"></p>
-<p><img border="0" src="img/2002_0804_123138AA.jpg" width="414" height="309"> <img border="0" src="img/2002_0804_124724AA.jpg" width="415" height="308"></p>
-<p><img border="0" src="img/2002_0421_160429AA.jpg" width="421" height="308">  <img border="0" src="img/2002_0411_185335AA.jpg" width="418" height="308"></p>
-<p><img border="0" src="img/2002_0413_163417AA.jpg" width="415" height="313"> <img border="0" src="img/2002_1007_161409AA.jpg" width="419" height="313"></p>
-<p><img border="0" src="img/2004_0928_160931AA.jpg" width="417" height="315"> <img border="0" src="img/2002_0821_173045AA.jpg" width="414" height="314"></p>
+<p align="center"><img border="0" src="img/2002_0417_192108AA.jpg" width="419" height="315"> <img border="0" src="img/2002_0331_115420AA.jpg" width="422" height="316"></p>
+<p align="center"><img border="0" src="img/2002_0804_123138AA.jpg" width="414" height="309"> <img border="0" src="img/2002_0804_124724AA.jpg" width="415" height="308"></p>
+<p align="center"><img border="0" src="img/2002_0421_160429AA.jpg" width="421" height="308">  <img border="0" src="img/2002_0411_185335AA.jpg" width="418" height="308"></p>
+<p align="center"><img border="0" src="img/2002_0413_163417AA.jpg" width="415" height="313"> <img border="0" src="img/2002_1007_161409AA.jpg" width="419" height="313"></p>
+<p align="center"><img border="0" src="img/2004_0928_160931AA.jpg" width="417" height="315"> <img border="0" src="img/2002_0821_173045AA.jpg" width="414" height="314"></p>
 <ul>
-  <li><b><font face="Arial">Turned into this</font></b></li>
+  <li>
+    <p align="center"><b><font face="Arial">Turned into this</font></b></li>
 </ul>
-<p><img border="0" src="img/2002_1122_211924AA.jpg" width="418" height="314">
+<p align="center"><img border="0" src="img/2002_1122_211924AA.jpg" width="418" height="314">
 <img border="0" src="img/2004_0928_182618AA.jpg" width="416" height="315"></p>
-<p><img border="0" src="img/2005_0407_125139AA.jpg" width="421" height="314">
+<p align="center"><img border="0" src="img/2005_0407_125139AA.jpg" width="421" height="314">
 <img border="0" src="img/2005_0508_142943AA.jpg" width="417" height="314"></p>
-<p><img border="0" src="img/2005_0508_142831AA.jpg" width="420" height="315">
+<p align="center"><img border="0" src="img/2005_0508_142831AA.jpg" width="420" height="315">
 <img border="0" src="img/2005_0823_121956AA.jpg" width="421" height="317"></p>
+
+<p align="center"><font face="Arial Rounded MT Bold"><b>Sold the car in august
+2005 to be bought back in 2014!&nbsp; Was abandoned in a garage for years after
+a breakdown.</b></font></p>
+
+<p align="center"><font face="Arial Rounded MT Bold" size="7"><b>2014 to 2020</b></font></p>
+
+<ul>
+  <li>
+    <p align="center"><b><font face="Arial Rounded MT Bold" size="3">Second
+    restoration started, but this time everything to be updated including
+    fitting a fueltech engine management system with touch control and 18&quot;
+    wheels and low profile tyres.</font></b></li>
+</ul>
+<p align="left">&nbsp;</p>
+<ul>
+  <li>
+    <p align="left"><b><font face="Arial Rounded MT Bold" size="3">Vehicle
+    stripped and put on a rotisserie for media blasting</font></b></li>
+</ul>
+<p align="center"><img border="0" src="IMG_20180401_135515.jpg" width="484" height="273">
+<img border="0" src="IMG_20180403_170741.jpg" width="492" height="275"></p>
+<p align="center"><img border="0" src="IMG_20180726_112826.jpg" width="391" height="520">
+<img border="0" src="IMG_20180823_200825.jpg" width="546" height="410"></p>
+<p align="center"><img border="0" src="IMG_20181123_131530.jpg" width="451" height="336">
+<img border="0" src="IMG_20190209_161934.jpg" width="453" height="341"></p>
+<p align="center"><img border="0" src="IMG_20181127_140803.jpg" width="486" height="363">
+<img border="0" src="IMG_20181208_132356.jpg" width="488" height="365"></p>
+<p align="center"><img border="0" src="IMG_20181209_142151.jpg" width="512" height="386">&nbsp;
+<img border="0" src="IMG_20190323_111511.jpg" width="524" height="389"></p>
+<p align="center"><img border="0" src="IMG_20190519_145349.jpg" width="571" height="430">
+<img border="0" src="IMG_20190523_133207.jpg" width="567" height="429"></p>
+<p align="center"><img border="0" src="IMG_20190706_210605.jpg" width="420" height="315">
+<img border="0" src="IMG_20190625_142120.jpg" width="340" height="445"></p>
+<p align="center"><img border="0" src="IMG_20200504_182534.jpg" width="420" height="315">
+<img border="0" src="IMG_20190605_112123.jpg" width="420" height="315"></p>
+<p align="center"><img border="0" src="IMG_20200830_084941.jpg" width="828" height="468"></p>
+<p align="center"><img border="0" src="IMG_20190721_152346.jpg" width="1000" height="750"></p>
+<p align="center">&nbsp;</p>
+<p align="left">&nbsp;</p>
 
 </body>
 
