--- a/rscamaro.html
+++ b/rscamaro.html
@@ -81,24 +81,24 @@ a breakdown.</b></font></p>
     <p align="left"><b><font face="Arial Rounded MT Bold" size="3">Vehicle
     stripped and put on a rotisserie for media blasting</font></b></li>
 </ul>
-<p align="center"><img border="0" src="IMG_20180401_135515.jpg" width="484" height="273">
-<img border="0" src="IMG_20180403_170741.jpg" width="492" height="275"></p>
-<p align="center"><img border="0" src="IMG_20180726_112826.jpg" width="391" height="520">
-<img border="0" src="IMG_20180823_200825.jpg" width="546" height="410"></p>
-<p align="center"><img border="0" src="IMG_20181123_131530.jpg" width="451" height="336">
-<img border="0" src="IMG_20190209_161934.jpg" width="453" height="341"></p>
-<p align="center"><img border="0" src="IMG_20181127_140803.jpg" width="486" height="363">
-<img border="0" src="IMG_20181208_132356.jpg" width="488" height="365"></p>
-<p align="center"><img border="0" src="IMG_20181209_142151.jpg" width="512" height="386">&nbsp;
-<img border="0" src="IMG_20190323_111511.jpg" width="524" height="389"></p>
-<p align="center"><img border="0" src="IMG_20190519_145349.jpg" width="571" height="430">
-<img border="0" src="IMG_20190523_133207.jpg" width="567" height="429"></p>
-<p align="center"><img border="0" src="IMG_20190706_210605.jpg" width="420" height="315">
-<img border="0" src="IMG_20190625_142120.jpg" width="340" height="445"></p>
-<p align="center"><img border="0" src="IMG_20200504_182534.jpg" width="420" height="315">
-<img border="0" src="IMG_20190605_112123.jpg" width="420" height="315"></p>
-<p align="center"><img border="0" src="IMG_20200830_084941.jpg" width="828" height="468"></p>
-<p align="center"><img border="0" src="IMG_20190721_152346.jpg" width="1000" height="750"></p>
+<p align="center"><img border="0" src="img/IMG_20180401_135515.jpg" width="484" height="273">
+<img border="0" src="img/IMG_20180403_170741.jpg" width="492" height="275"></p>
+<p align="center"><img border="0" src="img/IMG_20180726_112826.jpg" width="391" height="520">
+<img border="0" src="img/IMG_20180823_200825.jpg" width="546" height="410"></p>
+<p align="center"><img border="0" src="img/IMG_20181123_131530.jpg" width="451" height="336">
+<img border="0" src="img/IMG_20190209_161934.jpg" width="453" height="341"></p>
+<p align="center"><img border="0" src="img/IMG_20181127_140803.jpg" width="486" height="363">
+<img border="0" src="img/IMG_20181208_132356.jpg" width="488" height="365"></p>
+<p align="center"><img border="0" src="img/IMG_20181209_142151.jpg" width="512" height="386">&nbsp;
+<img border="0" src="img/IMG_20190323_111511.jpg" width="524" height="389"></p>
+<p align="center"><img border="0" src="img/IMG_20190519_145349.jpg" width="571" height="430">
+<img border="0" src="img/IMG_20190523_133207.jpg" width="567" height="429"></p>
+<p align="center"><img border="0" src="img/IMG_20190706_210605.jpg" width="420" height="315">
+<img border="0" src="img/IMG_20190625_142120.jpg" width="340" height="445"></p>
+<p align="center"><img border="0" src="img/IMG_20200504_182534.jpg" width="420" height="315">
+<img border="0" src="img/IMG_20190605_112123.jpg" width="420" height="315"></p>
+<p align="center"><img border="0" src="img/IMG_20200830_084941.jpg" width="828" height="468"></p>
+<p align="center"><img border="0" src="img/IMG_20190721_152346.jpg" width="1000" height="750"></p>
 <p align="center">&nbsp;</p>
 <p align="left">&nbsp;</p>
 
