--- a/rscamaro.html
+++ b/rscamaro.html
@@ -81,7 +81,7 @@ a breakdown.</b></font></p>
     <p align="left"><b><font face="Arial Rounded MT Bold" size="3">Vehicle
     stripped and put on a rotisserie for media blasting</font></b></li>
 </ul>
-<p align="center"><img border="0" src="img/IMG_20180401_135515.jpg" width="484" height="273">
+<p align="center"><img border="0" src="img/rs-camaro-unit.jpg" width="484" height="273">
 <img border="0" src="img/IMG_20180403_170741.jpg" width="492" height="275"></p>
 <p align="center"><img border="0" src="img/IMG_20180726_112826.jpg" width="391" height="520">
 <img border="0" src="img/IMG_20180823_200825.jpg" width="546" height="410"></p>
