--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ over the years</font></b></p>
 
 
 <p align="center"><a href="showcamaro.html"><img border="0" src="img/camaroatnewarkofficialphoto.jpg" width="383" height="259"></a>&nbsp;
-<a href="rscamaro.html"><img border="0" src="img/2005_0508_142831AA.jpg" width="341" height="260"></a></p>
+<a href="rscamaro.html"><img border="0" src="img/12thjuly2020morrisonshalfway.jpg" width="341" height="260"></a></p>
 <p align="center"><a href="countrysquire.html"><img border="0" src="img/ford2.jpg" width="375" height="265"></a>
 <a href="lincolnmark8.html"><img border="0" src="img/29sept20112.jpg" width="356" height="265"></a></p>
 
