--- a/rscamaro.html
+++ b/rscamaro.html
@@ -24,8 +24,8 @@
   <li><font face="Arial"><b>Finished in May 2005 after a LOT of work!&nbsp;</b></font></li>
   <li><font face="Arial"><b>Rescued from RAF Mildenhall where it had been
     obviously driven hard by one of the personnel there.</b></font></li>
-  <li><font face="Arial"><b>The original engine had died by putting a od through
-    the side of the block.&nbsp; Then left.</b></font></li>
+  <li><font face="Arial"><b>The original engine had died by putting a rod through
+    the side of the block.&nbsp; Then abandoned.</b></font></li>
   <li>
     <p align="center"><font face="Arial"><b>The gearbox supposedly was removed
     to put in a cobra replica.</b></font></li>
