--- a/rscamaro.html
+++ b/rscamaro.html
@@ -72,7 +72,7 @@ a breakdown.</b></font></p>
   <li>
     <p align="center"><b><font face="Arial Rounded MT Bold" size="3">Second
     restoration started, but this time everything to be updated including
-    fitting a fueltech engine management system with touch control and 18&quot;
+    fitting a fueltech engine management system with touch control, full homemade T304 stainless exhaust, poly bushes all round and 18&quot;
     wheels and low profile tyres.</font></b></li>
 </ul>
 <p align="left">&nbsp;</p>
