--- a/countrysquire.html
+++ b/countrysquire.html
@@ -36,12 +36,12 @@
     <p align="left"><font face="Arial"><b>This has been a frame off restoration</b></font></li>
 </ul>
 <p align="center"><img border="0" src="img/newframe2.jpg" width="538" height="402"></p>
-<p align="center"><img border="0" src="IMAG1797.jpg" width="305" height="538">&nbsp;
-<img border="0" src="IMAG1820.jpg" width="305" height="538"></p>
-<p align="center"><img border="0" src="IMAG1602.jpg" width="420" height="235">&nbsp;
-<img border="0" src="IMAG0715.jpg" width="420" height="235"></p>
-<p align="center"><img border="0" src="IMG_20200918_143550.jpg" width="420" height="236">&nbsp;
-<img border="0" src="IMG_20201030_103425.jpg" width="420" height="315"></p>
+<p align="center"><img border="0" src="img/IMAG1797.jpg" width="305" height="538">&nbsp;
+<img border="0" src="img/IMAG1820.jpg" width="305" height="538"></p>
+<p align="center"><img border="0" src="img/IMAG1602.jpg" width="420" height="235">&nbsp;
+<img border="0" src="img/IMAG0715.jpg" width="420" height="235"></p>
+<p align="center"><img border="0" src="img/IMG_20200918_143550.jpg" width="420" height="236">&nbsp;
+<img border="0" src="img/IMG_20201030_103425.jpg" width="420" height="315"></p>
 <p align="center"><font face="Arial" size="6">Click <a target="_blank" href="http://lowcamaro.com/Project-Big-Ford-pdf-version-part-1.pdf">HERE</a>
 for the diary of the build</font></p>
 
