--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ Dad bought me a 1970 Hillman Avenger back in 1980!&nbsp;</b></font></p>
 for long.</b></font></p>
 
 <p align="center"><font face="Arial"><b>Interestingly, I have been a full time
-11- 18 Maths teacher in Derbyshire for the last 31 years and cars have been an
+11- 18 Maths teacher in Derbyshire for the 34 years and cars have been an
 obsessive hobby in my own time.&nbsp; Now its time for a career change!</b></font></p>
 
 <p align="center"><font face="Arial"><b>I may be in my 50's but I still design,
@@ -70,13 +70,13 @@ contact me if you think I can help.</b></font></p>
 over the years</font></b></p>
 
 
-<p align="center"><a href="showcamaro.html"><img border="0" src="img/camaroatnewarkofficialphoto.jpg" width="452" height="260"></a>&nbsp;
+<p align="center"><a href="showcamaro.html"><img border="0" src="img/camaroatnewarkofficialphoto.jpg" width="452" height="260"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <a href="rscamaro.html"><img border="0" src="img/12thjuly2020morrisonshalfway.JPG" width="452" height="260"></a></p>
-<p align="center"><a href="countrysquire.html"><img border="0" src="img/ford2.jpg" width="375" height="265"></a>
-<a href="lincolnmark8.html"><img border="0" src="img/29sept20112.jpg" width="356" height="265"></a></p>
+<p align="center"><a href="countrysquire.html"><img border="0" src="img/ford2.jpg" width="464" height="324"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="lincolnmark8.html"><img border="0" src="img/29sept20112.jpg" width="436" height="326"></a></p>
 
-<p align="center"><a href="pimpedvan.html"><img border="0" src="img/2009_0502_115748AA.jpg" width="396" height="297"></a>
-<a href="transam.html"><img border="0" src="img/transam4.jpg" width="408" height="299"></a></p>
+<p align="center"><a href="pimpedvan.html"><img border="0" src="img/2009_0502_115748AA.jpg" width="448" height="333"></a>&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="transam.html"><img border="0" src="img/transam4.jpg" width="459" height="336"></a></p>
 
 <p align="center"><a href="cobra.html"><img border="0" src="img/Scan6.jpg" width="585" height="408"></a></p>
 
