--- a/showcamaro.html
+++ b/showcamaro.html
@@ -38,6 +38,9 @@
     <p align="left"><font face="Arial"><b>Over the next 15 years (!), the car
     was turned into an air suspensioned lowrider with custom wheels and a custom
     flamed airbrushed paint scheme.</b></font></li>
+  <li>
+    <p align="left"><font face="Arial"><b>The car now (2020) sits in a private
+    museum in Burnham-on-Sea in Somerset.&nbsp; Being well looked after.</b></font></li>
 </ul>
 <p align="center"><img border="0" src="img/2002_0828_140958AA.jpg" width="495" height="373"></p>
 <p align="center"><img border="0" src="img/airbrush10.jpg" width="493" height="371"></p>
