--- a/londonzsresto1.html
+++ b/londonzsresto1.html
@@ -47,7 +47,7 @@ area there, I removed the rear axle and put it on the lawn for a refurb!</b></fo
 <p align="center"><img border="0" src="img/P1040251.jpg" width="478" height="359"></p>
 <p align="center">Rear bushes burnt out (my favourite bit!) and new ones pushed
 in</p>
-<p align="center"><img border="0" src="img/burning_bush_2.jpg" width="306" height="230">
+<p align="center"><img border="0" src="img/burningbush2.jpg" width="306" height="230">
 <img border="0" src="img/P1040257.jpg" width="312" height="230"></p>
 <p align="center"><font face="Arial"><b>Heres the poor car with the axle removed
 patiently waiting!</b></font></p>
