--- a/londonzsresto1.html
+++ b/londonzsresto1.html
@@ -27,7 +27,7 @@ centre rear</b></font></p>
 <p align="center"><img border="0" src="img/P1040228.jpg" width="497" height="374">&nbsp;</p>
 <p align="left"><font face="Arial"><b>And everything reassembled (carefully!)
 and new brake fluid pulled through to get rid of the murky dodgy stuff!).</b></font></p>
-<p align="center"><img border="0" src="img/P1040249.jpg" width="375" height="496"></p>
+<p align="center"><img border="0" src="img/P1040249.JPG" width="375" height="496"></p>
 <p align="left"><font face="Arial"><b>While I was on that side, I removed the
 inner wheel arch liner and cleared out all the mud from the lower wing corner
 with compressed air (went all over!), dried it all out and sprayed it with <a href="http://rust.co.uk/products/product/405069/00005-dinitrol-3125-hs-cavity-wax/">dinitrol
