--- a/londonzsresto1.html
+++ b/londonzsresto1.html
@@ -32,7 +32,7 @@ and new brake fluid pulled through to get rid of the murky dodgy stuff!).</b></f
 inner wheel arch liner and cleared out all the mud from the lower wing corner
 with compressed air (went all over!), dried it all out and sprayed it with <a href="http://rust.co.uk/products/product/405069/00005-dinitrol-3125-hs-cavity-wax/">dinitrol
 3125</a> and used a heat gun to make it flow through all the seams</b></font></p>
-<p align="left"><img border="0" src="img/P1040219.jpg" width="352" height="263">&nbsp;
+<p align="center"><img border="0" src="img/P1040219.jpg" width="352" height="263">&nbsp;
 <img border="0" src="img/P1030854.jpg" width="329" height="436"></p>
 <p align="left"><font face="Arial"><b>Also lower control arm replaced by this
 one</b></font></p>
