--- a/londonzsresto2.html
+++ b/londonzsresto2.html
@@ -14,12 +14,12 @@
 <p><font face="Arial"><b>Drivers door handle rubbed down and sprayed with the
 correct colour and each rear side window button (3 on each side) prepped and sprayed gloss black
 and lacquered.</b></font></p>
-<p><img border="0" src="img/P1030891.jpg" width="283" height="371"><font face="Arial"><b>
+<p align="center"><img border="0" src="img/P1030891.jpg" width="283" height="371"><font face="Arial"><b>
 <img border="0" src="img/P1030898.jpg" width="389" height="289"></b></font></p>
-<p><img border="0" src="img/P1040129.jpg" width="408" height="305"></p>
+<p align="center"><img border="0" src="img/P1040129.jpg" width="408" height="305"></p>
 <p><font face="Arial"><b>Steering wheel removed and worn blue areas re-dyed
 black.&nbsp;</b></font></p>
-<p><img border="0" src="img/P1040108.jpg" width="330" height="248">  <img border="0" src="img/P1040110.jpg" width="325" height="247"></p>
+<p align="center"><img border="0" src="img/P1040108.jpg" width="330" height="248">  <img border="0" src="img/P1040110.jpg" width="325" height="247"></p>
 <p align="center"><img border="0" src="img/P1040112.jpg" width="421" height="315"></p>
 <p align="center"><font face="Arial"><b>The saggy rear parcel shelf was removed
 and a plywood section cut and bonded and painted black to the underside of the
