--- a/londonzsresto3.html
+++ b/londonzsresto3.html
@@ -18,7 +18,7 @@ pulsing that changed frequency depending on the temp setting (pulse width
 modulated), which meant the actual valve had stuck - probably full of
 antifreeze.&nbsp; Which it was.</b></font></p>
 <p><font face="Arial"><b>Old one removed and new one fitted....</b></font></p>
-<p><img border="0" src="img/P1040098.jpg" width="318" height="241">&nbsp; <img border="0" src="img/P1040097.jpg" width="320" height="242"></p>
+<p align="center"><img border="0" src="img/P1040098.jpg" width="318" height="241">&nbsp; <img border="0" src="img/P1040097.jpg" width="320" height="242"></p>
 <p><font face="Arial"><b>Popped the car over to Halfords in Drakehouse for an AC service.</b></font></p>
 <p><font face="Arial"><b>35 mins later and the temp at the face vents is 4
 degrees!&nbsp; lower than most new cars.</b></font></p>
