--- a/showcamaro.html
+++ b/showcamaro.html
@@ -12,7 +12,7 @@
 
 <body bgcolor="#0000FF" text="#FFFF00">
 
-<p><b><font color="#FFFF00">
+<p><b><font color="#FFFF00" face="Arial" size="7">
 <marquee>1986 Camaro Project</marquee>
 </font></b></p>
 <hr width="65%" noshade size="6" color="#FF0000">
