--- a/lincolnmark8.html
+++ b/lincolnmark8.html
@@ -39,15 +39,15 @@ on my birthday! (8th feb).</b></font></p>
 <blockquote>
   <p align="left"><font face="Arial"><b>Rear neon light replaced for one in a
   lot better condition</b></font></p>
-  <p align="left"><img border="0" src="img/newneonlght2.jpg" width="368" height="273">
+  <p align="center"><img border="0" src="img/newneonlght2.jpg" width="368" height="273">
   <img border="0" src="img/noneonbootlid2.jpg" width="363" height="277"></p>
   <p align="left"><b><font face="Arial">All four calipers stripped down, media
   blasted and sprayed red.&nbsp; Rear backplates removed, and painted.</font></b></p>
   <p align="left"><b><font face="Arial">All 4 discs and pads replaced and new
   fluid bled through.</font></b></p>
-  <p align="left"><img border="0" src="img/driversfrontcaliper.jpg" width="363" height="271"><b><font face="Arial">&nbsp;
+  <p align="center"><img border="0" src="img/driversfrontcaliper.jpg" width="363" height="271"><b><font face="Arial">&nbsp;
   <img border="0" src="img/driversrearcomplete.jpg" width="365" height="275"></font></b></p>
-  <p align="left"><img border="0" src="img/painteddriversreardisc.jpg" width="359" height="269">&nbsp;
+  <p align="center"><img border="0" src="img/painteddriversreardisc.jpg" width="359" height="269">&nbsp;
   <img border="0" src="img/painteddriversreardisc2.jpg" width="351" height="270"></p>
   <p align="left"><font face="Arial"><b>New battery installed £100!!!&nbsp; And
   new connectors.</b></font></p>
