--- a/index.html
+++ b/index.html
@@ -78,13 +78,11 @@ over the years</font></b></p>
 <p align="center"><a href="pimpedvan.html"><img border="0" src="img/2009_0502_115748AA.jpg" width="448" height="333"></a>&nbsp;&nbsp;&nbsp;&nbsp;
 <a href="transam.html"><img border="0" src="img/transam4.jpg" width="459" height="336"></a></p>
 
-<p align="center"><a href="cobra.html"><img border="0" src="img/Scan6.jpg" width="585" height="408"></a></p>
-
-<p align="center"><a href="londonzsinspection.html"><img border="0" src="img/P1040290.jpg" width="410" height="312"></a>&nbsp;
-<a href="crazysaxo.html"><img border="0" src="img/one.jpg" width="420" height="312"></a></p>
+<p align="center"><a href="cobra.html"><img border="0" src="img/Scan6.jpg" width="416" height="294"></a>&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="londonzsinspection.html"><img border="0" src="img/P1040290.jpg" width="392" height="294"></a>&nbsp;
+</p>
 
 <p align="center">&nbsp;</p>
-<p align="center"><a href="modifiedhonda.html"><img border="0" src="img/KGrHqUOKo4FJgvnYFIeBSbSyUBSu60_58.jpg" width="410" height="312"></a></p>
 
 </body>
 
