--- a/londonzsresto1.html
+++ b/londonzsresto1.html
@@ -17,10 +17,10 @@
 chucked in the scrap bin!</b></font></p>
 <p align="left"><font face="Arial"><b>Media blasted calipers and pad carriers
 and etch primed and painted red</b></font></p>
-<p align="left"><img border="0" src="img/P1040238.jpg" width="338" height="251"> <img border="0" src="img/P1040240.jpg" width="338" height="251"></p>
+<p align="center"><img border="0" src="img/P1040238.jpg" width="338" height="251"> <img border="0" src="img/P1040240.jpg" width="338" height="251"></p>
 <p align="left"><font face="Arial"><b>Reassembled with new seals and bleed
 nipples&nbsp; from <a href="http://biggred.co.uk/">BIGGRED</a>.</b></font></p>
-<p align="left"><img border="0" src="img/P1040243.jpg" width="341" height="255"> <img border="0" src="img/P1040244.jpg" width="340" height="254"></p>
+<p align="center"><img border="0" src="img/P1040243.jpg" width="341" height="255"> <img border="0" src="img/P1040244.jpg" width="340" height="254"></p>
 <p align="left"><font face="Arial"><b>Pad carrier here and new discs masked off
 and painted silver in the centre at the front and red around the edges and
 centre rear</b></font></p>
