--- a/londonzsinspection.html
+++ b/londonzsinspection.html
@@ -14,13 +14,20 @@
 <marquee>2002 Fiesta Zetec S Project</marquee>
 </b></font></font></font></p>
 <hr width="86%" size="3" color="#FF0000">
+<p><font face="Arial" color="#FFFF00" size="5"><b><u>Introduction:</u></b></font></p>
+<p><font face="Arial" color="#FFFF00"><b><u><a href="londonzsresto1.html">Brakes
+and suspension</a></u></b></font></p>
+<p><font face="Arial" color="#FFFF00"><b><u><a href="londonzsresto2.html">Cosmetics</a></u></b></font></p>
+<p><font face="Arial" color="#FFFF00"><b><u><a href="londonzsresto3.html">Heater
+and AC</a></u></b></font></p>
+<p><font face="Arial" color="#FFFF00"><b><u><a href="londonzsresto4.html">Possible
+future mods</a></u></b></font></p>
 <p><b><font face="Arial" color="#FFFF00">Spotted on Gumtree in June 2013.</font></b></p>
 <p><b><font face="Arial" color="#FFFF00">Being sold by a gentleman called Lennie
 in Essex.</font></b></p>
-<p><b><font face="Arial" color="#FFFF00">Hope he doesn't mind me using his
-original ad photos!&nbsp; Sorry Lennie!</font><font face="Arial" color="#FFFF00">&nbsp;</font></b></p>
-<p align="center"><img border="0" src="img/T2eC16ZHJIQE9qUHuEgnBRsILsKc348_80.jpg" width="542" height="406"></p>
-<p align="center"><img border="0" src="img/T2eC16FHJFoE9nh6n6FBRsILWws-48_80.jpg" width="542" height="406"></p>
+<p>&nbsp;</p>
+<p align="center"><img border="0" src="img/T2eC16ZHJIQE9qUHuEgnBRsILsKc348_80.jpg" width="422" height="320">&nbsp;
+<img border="0" src="img/T2eC16FHJFoE9nh6n6FBRsILWws-48_80.jpg" width="421" height="316"></p>
 <p align="center"><img border="0" src="img/dashwhenbought.jpg" width="541" height="406"></p>
 <p align="left"><font face="Arial"><b>I was in the middle of a huge american
 custom station wagon project and was driving my late dad's 2006 Toyota yaris -
@@ -44,7 +51,7 @@ care, it was fantastic fun to drive.</b></font></p>
 <p align="left"><font face="Arial"><b>Here it is outside the house for the first
 time</b></font></p>
 <p align="center"><img border="0" src="img/P1030825.jpg" width="403" height="298"> <img border="0" src="img/P1030826.jpg" width="397" height="298"></p>
-<p align="left"><font face="Arial"><b>Interesting writing around the car</b></font></p>
+<p align="left"><font face="Arial"><b>Interesting stickers around the car</b></font></p>
 <p align="center"><img border="0" src="img/P1030856.jpg" width="392" height="521"> <img border="0" src="img/P1030857.jpg" width="425" height="320"></p>
 <p align="center"><img border="0" src="img/P1030858.jpg" width="420" height="314"></p>
 <p align="left"><font face="Arial"><b>Now since I teach maths to 11 to 18 year
@@ -97,8 +104,7 @@ apparent (the more there is the better!!)</b></font></p>
     <p align="left"><font face="Arial"><b>LCD Clock not backlit</b></font></li>
   <li>
     <p align="left"><font face="Arial"><b>Rear axle bushes split and causing
-    1&quot; excess travel and causing car to crab&nbsp; See <a href="http://youtu.be/5Nw4qD7Eo_U">you
-    tube video</a></b></font></li>
+    1&quot; excess travel and causing car to crab.&nbsp;&nbsp;</b></font></li>
   <li>
     <p align="left"><font face="Arial"><b>DVD function on flip out stereo not
     working (pink wire not earthed)</b></font></li>
@@ -196,7 +202,7 @@ restoring/building cars, so anything slightly wrong will be put right.</b></font
     smooth luck</b></font></li>
 </ol>
     <p align="left">&nbsp;<p align="center"><font face="Arial"><b>Click <a href="londonzsresto1.html">here</a>
-for brakes and suspension</b></font>
+ for brakes and suspension</b></font>
 <p align="left">&nbsp;</p>
 <p align="left"><font face="Arial"><b>&nbsp;</b></font></p>
 <p align="left">&nbsp;</p>
