--- a/countrysquire.html
+++ b/countrysquire.html
@@ -16,11 +16,15 @@
 <hr width="80%" noshade size="6" color="#FF0000">
 
 <ul>
-  <li><font face="Arial"><b>This is my ongoing project to produce a car that
-    sits flat on the floor on airbags.&nbsp; And i mean FLAT on its
-    sills/rockers.&nbsp;</b></font></li>
+  <li><font face="Arial"><b>This was a search to find a project that could be
+    turned into a slammed to the ground airbagged lowrider.&nbsp;</b></font></li>
+  <li><font face="Arial"><b>That actually sits flat on the floor on the
+    sills/rockers.</b></font></li>
+  <li><font face="Arial"><b>No matter what it takes.&nbsp;</b></font></li>
+  <li><font face="Arial"><b>But not something that has been done before.</b></font></li>
+  <li><font face="Arial"><b>This one appeared on ebay.&nbsp;</b></font></li>
   <li><font face="Arial"><b>Bought on the 20th September 2009 from Abergavenny
-    in South Wales.</b></font></li>
+    in South Wales in the UK.</b></font></li>
 </ul>
 <p align="center"><img border="0" src="img/ford1.jpg" width="370" height="291">
 <img border="0" src="img/ford7.jpg" width="420" height="227"></p>
@@ -28,7 +32,8 @@
 <img border="0" src="img/DSCF0051.jpg" width="413" height="314"></p>
 <ul>
   <li>
-    <p align="left"><font face="Arial"><b>Here's the target appearence!</b></font></li>
+    <p align="left"><font face="Arial"><b>Here's my artistic rendition of what
+    it will hopefully look like.</b></font></li>
 </ul>
 <p align="center"><img border="0" src="img/greenwagon.jpg" width="600" height="160"></p>
 <ul>
@@ -43,7 +48,7 @@
 <p align="center"><img border="0" src="img/IMG_20200918_143550.jpg" width="420" height="236">&nbsp;
 <img border="0" src="img/IMG_20201030_103425.jpg" width="420" height="315"></p>
 <p align="center"><font face="Arial" size="6">Click <a target="_blank" href="http://lowcamaro.com/Project-Big-Ford-pdf-version-part-1.pdf">HERE</a>
-for the diary of the build</font></p>
+for part 1 of the full personal diary of the build.</font></p>
 
 </body>
 
