--- a/countrysquire.html
+++ b/countrysquire.html
@@ -44,7 +44,7 @@
 <p align="center"><img border="0" src="img/IMAG1797.jpg" width="305" height="538">&nbsp;
 <img border="0" src="img/IMAG1820.jpg" width="305" height="538"></p>
 <p align="center"><img border="0" src="img/IMAG1602.jpg" width="420" height="235">&nbsp;
-<img border="0" src="img/P1040438.jpg" width="420" height="235"></p>
+<img border="0" src="img/P1040438.JPG" width="420" height="235"></p>
 <p align="center"><img border="0" src="img/IMG_20200918_143550.jpg" width="420" height="236">&nbsp;
 <img border="0" src="img/IMG_20201030_103425.jpg" width="420" height="315"></p>
 <p align="center"><font face="Arial" size="6">Click <a target="_blank" href="http://lowcamaro.com/Project-Big-Ford-pdf-version-part-1.pdf">HERE</a>
