--- a/countrysquire.html
+++ b/countrysquire.html
@@ -40,7 +40,15 @@
   <li>
     <p align="left"><font face="Arial"><b>This has been a frame off restoration</b></font></li>
 </ul>
-    <p align="center"><img border="0" src="img/DSCF0211.JPG" width="640" height="480">
+    <p align="center"><img border="0" src="img/05012010.JPG" width="640" height="480">
+    <p align="center"><img border="0" src="img/winterframe2.JPG" width="480" height="640">
+    <p align="center"><img border="0" src="img/DSCF0215.JPG" width="413" height="311">
+    <img border="0" src="/img/rotrepair1.JPG" width="412" height="310">
+    <p align="center"><img border="0" src="img/rotrepair6.JPG" width="408" height="305">
+    <img border="0" src="img/rotrepair9.JPG" width="409" height="307">
+    <p align="center"><font face="Arial"><b>Dedication eh?&nbsp; Welding in the
+    snow!</b></font>
+    <p align="center">&nbsp;
 <p align="center"><img border="0" src="img/newframe2.jpg" width="640" height="480"></p>
 <p align="center"><img border="0" src="img/IMAG1797.jpg" width="305" height="538">&nbsp;
 <img border="0" src="img/IMAG1820.jpg" width="305" height="538"></p>
