--- a/countrysquire.html
+++ b/countrysquire.html
@@ -40,6 +40,7 @@
   <li>
     <p align="left"><font face="Arial"><b>This has been a frame off restoration</b></font></li>
 </ul>
+    <p align="center"><img border="0" src="img/DSCF0211.JPG" width="640" height="480">
     <p align="center"><img border="0" src="img/05012010.JPG" width="640" height="480">
     <p align="center"><img border="0" src="img/winterframe2.JPG" width="480" height="640">
     <p align="center"><img border="0" src="img/DSCF0215.JPG" width="413" height="311">
