--- a/countrysquire.html
+++ b/countrysquire.html
@@ -49,6 +49,24 @@
     <img border="0" src="img/rotrepair9.JPG" width="409" height="307">
     <p align="center"><font face="Arial"><b>Dedication eh?&nbsp; Welding in the
     snow!</b></font>
+    <p align="center"><font face="Arial"><b>Fuel filler door removed and welded
+    up</b></font>
+    <p align="center"><img border="0" src="img/fuelfillerdoor.JPG" width="481" height="262">
+    <img border="0" src="img/fueldoorplate2.JPG" width="354" height="263">]
+    <p align="center"><img border="0" src="img/nofueldoor2.JPG" width="715" height="538">
+    <p align="center"><font face="Arial"><b>Door handles welded up</b></font>
+    <p align="center"><img border="0" src="img/driversdoorhandleplate.JPG" width="562" height="422">
+    <img border="0" src="img/driversdoorinshed2.JPG" width="560" height="423">
+    <p align="center"><font face="Arial"><b>Luggage rack on roof removed and
+    holes welded up</b></font>
+    <p align="center"><img border="0" src="img/IMG_20200908_172733.jpg" width="613" height="343">
+    <img border="0" src="img/IMG_20201021_152225.jpg" width="460" height="345">
+    <p align="center"><font face="Arial"><b>Tailgate welded up smooth</b></font>
+    <p align="center"><img border="0" src="img/tailgatestripped.JPG" width="522" height="392">
+    <img border="0" src="img/tailgatewoodstrip2.JPG" width="520" height="394">
+    <p align="center"><font face="Arial"><b>On the way to my workshop to
+    complete</b></font>
+    <p align="center"><img border="0" src="img/IMG_20190605_094610.jpg" width="711" height="532">
     <p align="center">&nbsp;
 <p align="center"><img border="0" src="img/newframe2.jpg" width="640" height="480"></p>
 <p align="center"><img border="0" src="img/IMAG1797.jpg" width="305" height="538">&nbsp;
