--- a/countrysquire.html
+++ b/countrysquire.html
@@ -51,7 +51,7 @@
     snow!</b></font>
     <p align="center"><font face="Arial"><b>Fuel filler door removed and welded
     up</b></font>
-    <p align="center"><img border="0" src="img/fuelfillerdoor.JPG" width="481" height="262">
+    <p align="center"><img border="0" src="img/fuelfillerdoor.jpg" width="481" height="262">
     <img border="0" src="img/fueldoorplate2.JPG" width="354" height="263">]
     <p align="center"><img border="0" src="img/nofueldoor2.JPG" width="715" height="538">
     <p align="center"><font face="Arial"><b>Door handles welded up</b></font>
