--- a/showcamaro.html
+++ b/showcamaro.html
@@ -45,9 +45,15 @@
   <li>
     <p align="left"><font face="Arial"><b>The car now (2020) sits in a private
     museum in Burnham-on-Sea in Somerset.&nbsp; Being well looked after.</b></font></li>
+  <li>
+    <p align="left"><font face="Arial"><b>Every nut and bolt and washer was
+    changed to stainless and polished up.</b></font></li>
 </ul>
 <p align="center"><img border="0" src="img/2002_0828_140958AA.jpg" width="495" height="373"></p>
 <p align="center"><img border="0" src="img/airbrush10.jpg" width="493" height="371"></p>
+<p align="center"><font face="Arial"><b>Flames airbrushed on by Andy Scott</b></font></p>
+<p align="center"><img border="0" src="img/2006_0914_122025AA.JPG" width="460" height="345">
+<img border="0" src="img/2006_1006_202353AA.JPG" width="460" height="345"></p>
 <ul>
   <li>
     <p align="left"><font face="Arial"><b>Everything that could be chromed was!</b></font></li>
@@ -57,6 +63,8 @@
 <img border="0" src="img/2003_1229_204929AA.jpg" width="352" height="266"></p>
 <p align="center"><img border="0" src="img/airsuspensionsolenoids.jpg" width="381" height="285">
 <img border="0" src="img/2008_0927_102015AA.jpg" width="389" height="285"></p>
+<p align="center"><img border="0" src="img/2009_0626_181338AA.JPG" width="640" height="480">
+<img border="0" src="img/2004_0208_114456AA.JPG" width="480" height="640"></p>
 <p align="center"><img border="0" src="img/2009_0605_151550AA.jpg" width="412" height="308">
 <img border="0" src="img/stance1.jpg" width="416" height="308"></p>
 <p align="center"><img border="0" src="img/camaroatnewarkofficialphoto.jpg" width="720" height="480"></p>
