--- a/cobra.html
+++ b/cobra.html
@@ -30,11 +30,11 @@ to be taken to my home and worked on there,</b></font></p>
 
 <p align="left">&nbsp;</p>
 
-<p align="center"><img border="0" src="img/Scan7.jpg" width="590" height="413"></p>
+<p align="center"><img border="0" src="img/scan7.jpg" width="590" height="413"></p>
 
-<p align="center"><img border="0" src="img/Scan8.jpg" width="588" height="415"></p>
+<p align="center"><img border="0" src="img/scan8.jpg" width="588" height="415"></p>
 
-<p align="center"><img border="0" src="img/Scan5.jpg" width="588" height="410"></p>
+<p align="center"><img border="0" src="img/scan5.jpg" width="588" height="410"></p>
 
 <p align="center"><img border="0" src="img/Scan6.jpg" width="585" height="413"></p>
 
