--- a/countrysquire.html
+++ b/countrysquire.html
@@ -75,7 +75,7 @@
 <img border="0" src="img/IMAG0715.jpg" width="420" height="235"></p>
 <p align="center"><img border="0" src="img/IMG_20200918_143550.jpg" width="420" height="236">&nbsp;
 <img border="0" src="img/IMG_20201030_103425.jpg" width="420" height="315"></p>
-<p align="center"><font face="Arial" size="6">Click <a target="_blank" href="http://lowcamaro.com/Project-Big-Ford-pdf-version-part-1.pdf">HERE</a>
+<p align="center"><font face="Arial" size="6">Click <a href="http://lowcamaro.com/Project-Big-Ford-pdf-version-part-1.pdf">HERE</a>
 for part 1 of the full personal diary of the build.</font></p>
 
 </body>
